--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,35 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <meta name="description" content="Welcome to our fresh vegetable store! Explore our wide selection of locally sourced, organic vegetables. From vibrant tomatoes to crisp lettuce, we have everything you need to create delicious and healthy meals. Shop now for farm-fresh goodness delivered straight to your door.">
+    <title>GreenHarvest</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+
   </head>
   <body>
-    <load ="partials/header.html" />
+    <load src="partials/header.html" />
+    <load src="partials/menu.html" />
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+    <main>
+      <load src="partials/hero.html" />
+      <load src="partials/how-it-works.html" />
+      <load src="partials/announcement.html" />
+      <load src="partials/vegetables.html" />
+      <load src="partials/reviews.html" />
+      <load src="partials/your-order.html" />
+    </main>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <load src="partials/footer.html" />
 
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@0.11.0/dist/hls.min.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
